# PADS

./: CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  project_setup.md  pyproject.toml  setup.cfg
docs/: Makefile  conf.py  index.rst  make.bat
pads/: AcyclicReachability.py  Automata.py  Bicliques.py  Biconnectivity.py  Bipartite.py  BipartiteMatching.py  BucketQueue.py  CardinalityMatching.py  Chordal.py  CirclePack.py  CubicHam.py  DFS.py  Eratosthenes.py  FrequencyEstimator.py  GraphDegeneracy.py  GraphExamples.py  Graphs.py  Halin.py  IntegerHeap.py  IntegerPartitions.py  IntegerPoints.py  LCA.py  LCS.py  LexBFS.py  LongestIncreasingSubsequence.py  Lyndon.py  Medium.py  MinimumSpanningTree.py  Not.py  OrderedSequence.py  PartialCube.py  PartialOrder.py  PartitionRefinement.py  Permutations.py  ReadUndirectedGraph.py  Repetitivity.py  SMAWK.py  SVG.py  Sequence.py  SortedSet.py  (+6 more)
tests/: test_chordal.py  test_my_module.py
