[metadata]
name = PADS
version = 1.0
author = TNO Quantum
author_email = tnoquantum@tno.nl
description = Python Algorithms and Data Structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://tno.nl
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:

[options.packages.find]
include = pads
